--- a/labs/lab13/presentation/net-os-admin--lab13--presentation.qmd
+++ b/labs/lab13/presentation/net-os-admin--lab13--presentation.qmd
@@ -1,200 +1,155 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
-license: CC BY
+title: "Лабораторная работа №13"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Настройка NFS"
+license: "CC BY"
 date: today
-date-format: "YYYY-MM-DD" # Example: 2025-09-06
+date-format: "YYYY-MM-DD"
 ---
 
-# Информация
+# Цели и задачи
 
-## Докладчик
+**Цель:** Приобретение навыков настройки сервера NFS для удалённого доступа к ресурсам
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
+**Задачи:**
+- Настройка сервера NFSv4
+- Монтирование ресурсов на клиенте
+- Подключение каталогов к дереву NFS
+- Автоматизация развертывания
 
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
+# Настройка сервера NFSv4
 
-:::
-::: {.column width="30%"}
+**Основные этапы:**
+- Установка пакета nfs-utils
+- Создание структуры каталогов
+- Конфигурация файла exports
+- Настройка безопасности SELinux
 
-![](./image/kulyabov.jpg)
+![Установка nfs-utils на сервере](image/1.png){width=70%}
 
-:::
-::::::::::::::
+# Конфигурация экспорта
 
-# Вводная часть
+**Настройка доступа:**
+- Определение правил в /etc/exports
+- Настройка прав доступа
+- Экспорт корневого каталога
+- Параметры безопасности
 
-## Актуальность
+![Конфигурация файла /etc/exports](image/3.png){width=70%}
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+# Безопасность и firewall
 
-## Объект и предмет исследования
+**Обеспечение защиты:**
+- Настройка политик SELinux
+- Конфигурация межсетевого экрана
+- Открытие служб nfs, mountd, rpc-bind
+- Управление доступом
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+![Настройка firewall для NFS](image/6.png){width=70%}
 
-## Цели и задачи
+# Запуск службы NFS
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+**Активация сервиса:**
+- Запуск nfs-server
+- Настройка автозапуска
+- Проверка статуса службы
+- Диагностика работы
 
-## Материалы и методы
+![Запуск службы NFS](image/5.png){width=70%}
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+# Клиентская часть
 
-# Создание презентации
+**Настройка клиента:**
+- Установка nfs-utils
+- Проверка доступности ресурсов
+- Создание точек монтирования
+- Ручное монтирование
 
-## Процессор `pandoc`
+![Установка nfs-utils на клиенте](image/7.png){width=70%}
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+# Проверка доступности
 
-## Формат `pdf`
+**Диагностика подключения:**
+- Команда showmount
+- Тестирование при разных состояниях firewall
+- Проверка сетевой доступности
+- Анализ ошибок подключения
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+![Проверка доступности NFS-ресурсов](image/8.png){width=70%}
 
-## Код для формата `pdf`
+# Монтирование ресурсов
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+**Организация доступа:**
+- Создание каталога /mnt/nfs
+- Ручное монтирование ресурсов
+- Проверка корректности монтирования
+- Тестирование функциональности
 
-## Формат `html`
+![Монтирование NFS на клиенте](image/9.png){width=70%}
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+# Автоматическое монтирование
 
-## Код для формата `html`
+**Настройка автозапуска:**
+- Редактирование /etc/fstab
+- Использование опции _netdev
+- Проверка remote-fs.target
+- Тестирование после перезагрузки
 
-- Тема задаётся в файле `Makefile`
+![Настройка автоматического монтирования](image/10.png){width=70%}
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+# Интеграция веб-сервера
 
-## Получающиеся форматы
+**Подключение контента:**
+- Создание /srv/nfs/www
+- Bind-монтирование /var/www/
+- Экспорт каталога веб-сервера
+- Настройка постоянного монтирования
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+![Bind-монтирование каталога веб-сервера](image/11.png){width=70%}
 
-# Элементы презентации
+# Пользовательские каталоги
 
-## Актуальность
+**Организация личного пространства:**
+- Создание защищённых каталогов
+- Настройка прав доступа
+- Bind-монтирование в NFS
+- Тестирование доступа
 
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
+![Создание пользовательского каталога](image/13.png){width=70%}
 
-## Цели и задачи
+# Тестирование доступа
 
-- Не формулируйте более 1--2 целей исследования
+**Проверка функциональности:**
+- Создание тестовых файлов
+- Проверка прав различных пользователей
+- Тестирование записи и чтения
+- Верификация синхронизации
 
-## Материалы и методы
+![Тестирование доступа к пользовательскому каталогу](image/15.png){width=70%}
 
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
+# Автоматизация развертывания
 
-## Содержание исследования
+**Скрипты provisioning:**
+- Разработка скриптов для сервера и клиента
+- Интеграция с Vagrant
+- Автоматическая настройка служб
+- Проверка работы автоматизации
 
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
+![Скрипт настройки сервера NFS](image/16.png){width=70%}
 
-## Результаты
+# Контрольные вопросы
 
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+**Ключевые аспекты:**
+- Файл конфигурации: /etc/exports
+- Брандмауэр: службы nfs, mountd, rpc-bind
+- Автомонтирование: опция _netdev в fstab
+- Безопасность: SELinux и права доступа
 
+# Выводы
 
-## Итоговый слайд
-
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
-
-# Рекомендую
-
-## Принцип 10/20/30
-
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
-
-## Связь слайдов
-
-::: incremental
-
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
-
-:::
-
-## Количество сущностей
-
-::: incremental
-
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
-
-:::
-
-## Общие рекомендации
-
-::: incremental
-
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
-
-:::
-
-## Представление данных
-
-::: incremental
-
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
-
-:::
+**Результаты работы:**
+- Освоена настройка сервера NFSv4
+- Приобретён опыт монтирования ресурсов
+- Изучена интеграция каталогов в NFS
+- Разработана система автоматизации
+- Освоены методы обеспечения безопасности
