--- a/labs/lab13/report/net-os-admin--lab13--report.qmd
+++ b/labs/lab13/report/net-os-admin--lab13--report.qmd
@@ -1,67 +1,139 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-
-## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа №13"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Настройка NFS"
 license: "CC BY"
 ---
 
 # Цель работы
-
-Здесь приводится формулировка цели лабораторной работы.
-Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.
-Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Приобретение практических навыков настройки сервера NFS для организации удалённого доступа к файловым ресурсам в сетевой среде.
 
 # Задание
-
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
-
-# Теоретическое введение
-
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
-
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+1. Установить и настроить сервер NFSv4
+2. Подмонтировать удалённый ресурс на клиенте
+3. Подключить каталог с контентом веб-сервера к дереву NFS
+4. Подключить каталог для удалённой работы пользователя к дереву NFS
+5. Разработать скрипты автоматизации для развертывания NFS-инфраструктуры
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## Настройка сервера NFSv4
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+### Установка программного обеспечения
+На серверной машине выполнена установка пакета nfs-utils, необходимого для функционирования сервера NFS. Процесс установки включал загрузку всех зависимых компонентов.
+
+![Установка nfs-utils на сервере](image/1.png)
+
+### Создание структуры каталогов
+Создан корневой каталог дерева NFS в директории /srv/nfs. Данный каталог будет служить основной точкой для экспорта файловых ресурсов.
+
+![Создание каталога NFS](image/2.png)
+
+### Конфигурация экспорта ресурсов
+Выполнена настройка файла /etc/exports с определением правил доступа к общим ресурсам. Настроен экспорт корневого каталога с правами только на чтение для всех узлов сети.
+
+![Конфигурация файла /etc/exports](image/3.png)
+
+### Настройка безопасности SELinux
+Применены политики безопасности SELinux для каталога NFS. Выполнена настройка контекста безопасности и применение изменений к файловой системе.
+
+![Настройка SELinux для NFS](image/4.png)
+
+### Запуск службы NFS
+Активирована и запущена служба nfs-server. Настроен автозапуск службы при загрузке системы для обеспечения постоянной доступности ресурсов.
+
+![Запуск службы NFS](image/5.png)
+
+### Конфигурация межсетевого экрана
+Настроены правила firewall для разрешения NFS-трафика. Добавлены службы nfs, mountd и rpc-bind в исключения межсетевого экрана.
+
+![Настройка firewall для NFS](image/6.png)
+
+## Монтирование NFS на клиенте
+
+### Установка клиентского ПО
+На клиентской машине установлен пакет nfs-utils для обеспечения возможности работы с NFS-ресурсами.
+
+![Установка nfs-utils на клиенте](image/7.png)
+
+### Проверка доступности ресурсов
+Выполнена проверка доступности экспортируемых ресурсов с помощью команды showmount. Протестирована работа службы при различных состояниях firewall.
+
+![Проверка доступности NFS-ресурсов](image/8.png)
+
+### Создание точки монтирования
+Создан каталог /mnt/nfs для монтирования удалённых ресурсов. Выполнено ручное монтирование корневого каталога NFS-сервера.
+
+![Монтирование NFS на клиенте](image/9.png)
+
+### Настройка автоматического монтирования
+Добавлена запись в файл /etc/fstab для обеспечения автоматического монтирования NFS-ресурсов при загрузке операционной системы.
+
+![Настройка автоматического монтирования](image/10.png)
+
+## Подключение каталогов к дереву NFS
+
+### Организация каталога веб-сервера
+Создан специализированный каталог /srv/nfs/www для предоставления доступа к контенту веб-сервера через NFS.
+
+### Bind-монтирование каталогов
+Выполнено bind-монтирование каталога /var/www/ в структуру NFS. Это позволяет предоставлять доступ к содержимому веб-сервера без его физического перемещения.
+
+![Bind-монтирование каталога веб-сервера](image/11.png)
+
+### Экспорт каталога веб-сервера
+Добавлена запись в /etc/exports для экспорта каталога веб-сервера с правами чтения и записи для определённой подсети.
+
+![Экспорт каталога веб-сервера](image/12.png)
+
+## Подключение каталогов для работы пользователей
+
+### Создание пользовательского каталога
+Создан защищённый каталог в домашней директории пользователя с ограниченными правами доступа. В каталоге создан тестовый файл для проверки функциональности.
+
+![Создание пользовательского каталога](image/13.png)
+
+### Организация NFS-доступа к пользовательским данным
+Создана соответствующая структура каталогов в дереве NFS для предоставления доступа к пользовательским данным.
+
+### Bind-монтирование пользовательского каталога
+Выполнено bind-монтирование пользовательского каталога в структуру NFS. Настроены соответствующие права доступа.
+
+![Bind-монтирование пользовательского каталога](image/14.png)
+
+### Тестирование доступа
+Проведено тестирование доступа к пользовательскому каталогу с клиентской машины. Проверена возможность создания и модификации файлов различными пользователями.
+
+![Тестирование доступа к пользовательскому каталогу](image/15.png)
+
+## Автоматизация развертывания
+
+### Разработка скриптов provisioning
+Созданы исполняемые скрипты для автоматической настройки сервера и клиента NFS. Скрипты включают установку пакетов, настройку конфигурационных файлов и служб.
+
+![Скрипт настройки сервера NFS](image/16.png)
+
+### Интеграция с Vagrant
+Настроены секции provisioning в конфигурационном файле Vagrant для автоматического выполнения скриптов при развертывании виртуальных машин.
+
+![Конфигурация Vagrantfile](image/17.png)
+
+# Контрольные вопросы
+
+1. **Как называется файл конфигурации, содержащий общие ресурсы NFS?**  
+   Файл конфигурации, содержащий общие ресурсы NFS, называется /etc/exports.
+
+2. **Какие порты должны быть открыты в брандмауэре, чтобы обеспечить полный доступ к серверу NFS?**  
+   Для обеспечения полного доступа к серверу NFS должны быть открыты службы: nfs, mountd и rpc-bind, которые используют динамически назначаемые порты.
+
+3. **Какую опцию следует использовать в /etc/fstab, чтобы убедиться, что общие ресурсы NFS могут быть установлены автоматически при перезагрузке?**  
+   Для автоматического монтирования NFS-ресурсов при перезагрузке в /etc/fstab следует использовать опцию _netdev, которая указывает, что ресурс является сетевым устройством.
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
-
-# Список литературы{.unnumbered}
-
-::: {#refs}
-:::
+- Освоены практические навыки настройки сервера NFSv4 для предоставления удалённого доступа к файловым ресурсам
+- Приобретён опыт монтирования NFS-ресурсов на клиентских машинах с настройкой автоматического подключения
+- Изучены методы интеграции существующих каталогов (веб-сервера, пользовательских данных) в структуру NFS
+- Освоена техника bind-монтирования для предоставления доступа к различным файловым системам через NFS
+- Получены навыки настройки сетевой безопасности для NFS-сервиса, включая конфигурацию firewall и SELinux
+- Разработаны скрипты автоматизации для развертывания полнофункциональной NFS-инфраструктуры
