--- a/labs/lab14/presentation/net-os-admin--lab14--presentation.qmd
+++ b/labs/lab14/presentation/net-os-admin--lab14--presentation.qmd
@@ -1,200 +1,147 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
-license: CC BY
+title: "Лабораторная работа №14"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Настройка файловых служб Samba"
+license: "CC BY"
 date: today
-date-format: "YYYY-MM-DD" # Example: 2025-09-06
+date-format: "YYYY-MM-DD"
 ---
 
-# Информация
+# Цели и задачи
 
-## Докладчик
+**Цель:** Приобретение навыков настройки доступа к общим ресурсам по протоколу SMB
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
+**Задачи:**
+- Настройка сервера Samba
+- Конфигурация клиентского доступа
+- Автоматизация развертывания
+- Управление безопасностью
 
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
+# Установка и настройка сервера
 
-:::
-::: {.column width="30%"}
+**Основные этапы:**
+- Установка пакетов samba, samba-client, cifs-utils
+- Создание пользовательских групп
+- Конфигурация файла smb.conf
+- Запуск службы Samba
 
-![](./image/kulyabov.jpg)
+![Установка Samba пакетов на сервере](image/1.png){width=70%}
 
-:::
-::::::::::::::
+# Конфигурация сервера Samba
 
-# Вводная часть
+**Настройка параметров:**
+- Определение рабочей группы
+- Создание разделов общего доступа
+- Настройка прав доступа к ресурсам
+- Проверка синтаксиса конфигурации
 
-## Актуальность
+![Конфигурация файла smb.conf](image/3.png){width=70%}
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+# Безопасность и сетевые настройки
 
-## Объект и предмет исследования
+**Обеспечение защиты:**
+- Настройка межсетевого экрана
+- Конфигурация политик SELinux
+- Управление правами доступа к каталогам
+- Аутентификация пользователей
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+![Настройка firewall для Samba](image/6.png){width=70%}
 
-## Цели и задачи
+# Запуск службы Samba
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+**Активация сервиса:**
+- Запуск демона smb
+- Настройка автозапуска
+- Проверка статуса службы
+- Диагностика работы
 
-## Материалы и методы
+![Запуск службы Samba](image/5.png){width=70%}
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+# Клиентская конфигурация
 
-# Создание презентации
+**Настройка доступа:**
+- Установка клиентских пакетов
+- Конфигурация firewall клиента
+- Проверка доступности ресурсов
+- Настройка подключения
 
-## Процессор `pandoc`
+![Установка Samba клиента](image/9.png){width=70%}
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+# Проверка доступности ресурсов
 
-## Формат `pdf`
+**Диагностика подключения:**
+- Использование утилиты smbclient
+- Тестирование под разными учётными записями
+- Проверка списка доступных ресурсов
+- Анализ ошибок подключения
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+![Проверка доступности SMB-ресурсов](image/10.png){width=70%}
 
-## Код для формата `pdf`
+# Монтирование SMB-ресурсов
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+**Организация доступа:**
+- Создание точки монтирования
+- Ручное монтирование ресурсов
+- Настройка параметров доступа
+- Тестирование функциональности
 
-## Формат `html`
+![Монтирование SMB-ресурса на клиенте](image/11.png){width=70%}
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+# Автоматическое монтирование
 
-## Код для формата `html`
+**Настройка автоподключения:**
+- Создание файла учётных данных
+- Редактирование /etc/fstab
+- Использование параметра _netdev
+- Проверка после перезагрузки
 
-- Тема задаётся в файле `Makefile`
+![Настройка автоматического монтирования Samba](image/12.png){width=70%}
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+# Управление пользователями
 
-## Получающиеся форматы
+**Работа с учётными записями:**
+- Добавление пользователей в базу Samba
+- Настройка паролей доступа
+- Управление групповыми правами
+- Контроль аутентификации
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+![Добавление пользователя в базу Samba](image/8.png){width=70%}
 
-# Элементы презентации
+# SELinux для Samba
 
-## Актуальность
+**Безопасность на уровне ОС:**
+- Настройка контекста безопасности
+- Управление булевыми переключателями
+- Разрешение экспорта ресурсов
+- Мониторинг политик безопасности
 
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
+![Настройка SELinux для Samba](image/7.png){width=70%}
 
-## Цели и задачи
+# Автоматизация развертывания
 
-- Не формулируйте более 1--2 целей исследования
+**Скрипты provisioning:**
+- Разработка скриптов для сервера и клиента
+- Интеграция с системой виртуализации
+- Автоматическая настройка всех компонентов
+- Тестирование работы автоматизации
 
-## Материалы и методы
+![Скрипт настройки сервера Samba](image/13.png){width=70%}
 
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
+# Ключевые аспекты Samba
 
-## Содержание исследования
+**Основные характеристики:**
+- Поддержка смешанных сетевых сред
+- Совместимость с Windows-системами
+- Гибкое управление доступом
+- Интеграция с системами безопасности
+- Автоматизация администрирования
 
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
+# Выводы
 
-## Результаты
-
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
-
-
-## Итоговый слайд
-
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
-
-# Рекомендую
-
-## Принцип 10/20/30
-
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
-
-## Связь слайдов
-
-::: incremental
-
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
-
-:::
-
-## Количество сущностей
-
-::: incremental
-
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
-
-:::
-
-## Общие рекомендации
-
-::: incremental
-
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
-
-:::
-
-## Представление данных
-
-::: incremental
-
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
-
-:::
+**Результаты работы:**
+- Освоена настройка сервера Samba для общего доступа
+- Приобретён опыт клиентской конфигурации
+- Изучены методы обеспечения безопасности
+- Разработана система автоматизации
+- Освоены утилиты администрирования Samba
+- Получены навыки работы в гетерогенных сетях
