--- a/labs/lab14/report/net-os-admin--lab14--report.qmd
+++ b/labs/lab14/report/net-os-admin--lab14--report.qmd
@@ -1,67 +1,155 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-
-## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа №14"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Настройка файловых служб Samba"
 license: "CC BY"
 ---
 
 # Цель работы
-
-Здесь приводится формулировка цели лабораторной работы.
-Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.
-Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Приобретение практических навыков настройки доступа групп пользователей к общим ресурсам по протоколу SMB/Samba в смешанных сетевых средах.
 
 # Задание
-
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
-
-# Теоретическое введение
-
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
-
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+1. Установить и настроить сервер Samba
+2. Настроить на клиенте доступ к разделяемым ресурсам
+3. Разработать скрипты автоматизации для развертывания Samba-инфраструктуры
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## Настройка сервера Samba
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+### Установка программного обеспечения
+На серверной машине выполнена установка необходимых пакетов для работы Samba: samba, samba-client и cifs-utils. Процесс установки включал загрузку всех зависимых компонентов.
+
+![Установка Samba пакетов на сервере](image/1.png)
+
+### Создание пользовательской группы
+Создана группа sambagroup с идентификатором GID 1010 для пользователей, которым будет предоставлен доступ к общим ресурсам Samba. Текущий пользователь добавлен в созданную группу.
+
+![Создание группы sambagroup](image/2.png)
+
+### Создание общего каталога
+Создан каталог /srv/sambashare, который будет использоваться в качестве общего ресурса для сетевого доступа. Настроены базовые права доступа к каталогу.
+
+### Конфигурация файла smb.conf
+Выполнена настройка основного конфигурационного файла Samba /etc/samba/smb.conf. Определена рабочая группа и добавлен раздел [sambashare] с описанием общего ресурса.
+
+![Конфигурация файла smb.conf](image/3.png)
+
+### Проверка синтаксиса конфигурации
+Использована утилита testparm для проверки корректности синтаксиса конфигурационного файла smb.conf. Проверка подтвердила отсутствие ошибок в конфигурации.
+
+![Проверка синтаксиса smb.conf](image/4.png)
+
+### Запуск службы Samba
+Запущена и активирована служба smb. Настроен автозапуск службы при загрузке системы. Проверен статус работы демона Samba.
+
+![Запуск службы Samba](image/5.png)
+
+### Настройка межсетевого экрана
+Настроены правила firewall для разрешения Samba-трафика. Добавлена служба samba в исключения межсетевого экрана с применением постоянных правил.
+
+![Настройка firewall для Samba](image/6.png)
+
+### Настройка прав доступа
+Установлены права доступа для каталога с разделяемым ресурсом. Группе sambagroup предоставлены права на чтение, запись и выполнение в каталоге /srv/sambashare.
+
+### Конфигурация SELinux
+Настроены политики безопасности SELinux для каталога Samba. Установлен контекст безопасности samba_share_t и разрешён экспорт ресурсов для чтения и записи.
+
+![Настройка SELinux для Samba](image/7.png)
+
+### Добавление пользователя в базу Samba
+Пользователь добавлен в базу пользователей Samba с помощью утилиты smbpasswd. Установлен пароль для доступа к SMB-ресурсам.
+
+![Добавление пользователя в базу Samba](image/8.png)
+
+## Монтирование файловой системы Samba на клиенте
+
+### Установка клиентского ПО
+На клиентской машине установлены пакеты samba-client и cifs-utils для обеспечения возможности работы с SMB-ресурсами.
+
+![Установка Samba клиента](image/9.png)
+
+### Настройка клиентского firewall
+Настроены правила firewall для клиентской части Samba. Добавлена служба samba-client в исключения межсетевого экрана.
+
+### Проверка доступности ресурсов
+Выполнена проверка доступности общих ресурсов Samba с сервера с использованием утилиты smbclient. Протестирован доступ под различными учётными записями.
+
+![Проверка доступности SMB-ресурсов](image/10.png)
+
+### Создание точки монтирования
+Создан каталог /mnt/samba для монтирования удалённых SMB-ресурсов. Выполнено ручное монтирование общего ресурса с указанием параметров доступа.
+
+![Монтирование SMB-ресурса на клиенте](image/11.png)
+
+### Тестирование доступа к ресурсам
+Проведено тестирование доступа к общему ресурсу с клиентской машины. Проверена возможность создания и записи файлов на разделяемом ресурсе.
+
+### Настройка автоматического монтирования
+Создан файл с учётными данными /etc/samba/smbusers для безопасного хранения аутентификационной информации. Добавлена запись в /etc/fstab для автоматического монтирования SMB-ресурсов при загрузке системы.
+
+![Настройка автоматического монтирования Samba](image/12.png)
+
+### Проверка автоподключения
+Проверена корректность автоматического монтирования SMB-ресурсов после перезагрузки клиентской системы. Убедились в доступности ресурсов и правах доступа пользователя.
+
+## Автоматизация развертывания
+
+### Разработка скриптов provisioning
+Созданы исполняемые скрипты для автоматической настройки сервера и клиента Samba. Скрипты включают установку пакетов, настройку конфигурационных файлов, управление пользователями и группами.
+
+![Скрипт настройки сервера Samba](image/13.png)
+
+### Организация конфигурационных файлов
+Создана структура каталогов для хранения конфигурационных файлов сервера и клиента. Выполнено копирование рабочих конфигураций в соответствующие директории.
+
+### Интеграция с Vagrant
+Настроены секции provisioning в конфигурационном файле Vagrant для автоматического выполнения скриптов при развертывании виртуальных машин.
+
+![Конфигурация Vagrantfile для Samba](image/14.png)
+
+### Тестирование работы автоматизации
+Протестирована работа скриптов автоматизации при создании виртуальных машин. Проверено применение всех настроек и корректность работы Samba-сервиса.
+
+# Контрольные вопросы
+
+1. **Какова минимальная конфигурация для smb.conf для создания общего ресурса, который предоставляет доступ к каталогу /data?**  
+   Минимальная конфигурация: [data] → path = /data
+
+2. **Как настроить общий ресурс, который даёт доступ на запись всем пользователям, имеющим права на запись в файловой системе Linux?**  
+   Использовать параметры: writable = yes и create mask = 0664, directory mask = 0775
+
+3. **Как ограничить доступ на запись к ресурсу только членам определённой группы?**  
+   Использовать параметры: write list = @groupname и valid users = @groupname
+
+4. **Какой переключатель SELinux нужно использовать, чтобы позволить пользователям получать доступ к домашним каталогам на сервере через SMB?**  
+   setsebool samba_enable_home_dirs on
+
+5. **Как ограничить доступ к определённому ресурсу только узлам из сети 192.168.10.0/24?**  
+   Добавить параметр: hosts allow = 192.168.10.
+
+6. **Какую команду можно использовать, чтобы отобразить список всех пользователей Samba на сервере?**  
+   pdbedit -L
+
+7. **Что нужно сделать пользователю для доступа к ресурсу, который настроен как многопользовательский ресурс?**  
+   Пользователь должен иметь соответствующую учётную запись в базе Samba и быть членом группы с доступом к ресурсу
+
+8. **Как установить общий ресурс Samba в качестве многопользовательской учётной записи, где пользователь alice используется как минимальная учётная запись пользователя?**  
+   Использовать параметры: force user = alice и guest ok = yes
+
+9. **Как можно запретить пользователям просматривать учётные данные монтирования Samba в файле /etc/fstab?**  
+   Использовать файл с учётными данными (credentials) с правами 600 и указать его в опциях монтирования
+
+10. **Какая команда позволяет перечислить все экспортируемые ресурсы Samba, доступные на определённом сервере?**  
+    smbclient -L //server -U username
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
-
-# Список литературы{.unnumbered}
-
-::: {#refs}
-:::
+- Освоены практические навыки настройки сервера Samba для организации доступа к общим ресурсам в смешанных сетевых средах
+- Приобретён опыт конфигурации клиентской части Samba с настройкой автоматического монтирования сетевых ресурсов
+- Изучены методы управления доступом к ресурсам через групповые политики и настройки прав доступа
+- Освоена техника настройки безопасности Samba, включая конфигурацию SELinux и firewall
+- Получены навыки работы с утилитами администрирования Samba (smbpasswd, testparm, smbclient)
+- Разработана система автоматизации развертывания Samba-инфраструктуры с использованием скриптов provisioning
+- Изучены особенности работы протокола SMB в сравнении с NFS и специфика его применения в гетерогенных сетях
